--- a/springboot-shiro/pom.xml
+++ b/springboot-shiro/pom.xml
@@ -22,9 +22,7 @@
 
         <starter.mybatis.spring.version>1.3.2</starter.mybatis.spring.version>
         <starter.druid.version>1.1.9</starter.druid.version>
-        <starter.mybatis.mapper.version>2.0.2</starter.mybatis.mapper.version>
         <starter.mybatis.pagehelper.version>1.2.4</starter.mybatis.pagehelper.version>
-        <mapper.version>3.4.5</mapper.version>
 
         <commons.lang3.version>3.5</commons.lang3.version>
         <commons.collections.version>3.2.2</commons.collections.version>
@@ -37,6 +35,7 @@
         <mybatis.generator.version>1.3.6</mybatis.generator.version>
         <redis.version>2.9.0</redis.version>
         <shiro.version>1.3.2</shiro.version>
+        <shiro-redis.version>3.1.0</shiro-redis.version>
         <guava.version>23.0</guava.version>
         <nutz.version>1.r.65</nutz.version>
         <log4j.version>2.10.0</log4j.version>
@@ -99,12 +98,6 @@
             <artifactId>mysql-connector-java</artifactId>
             <scope>runtime</scope>
         </dependency>
-        <!-- mapper -->
-        <dependency>
-            <groupId>tk.mybatis</groupId>
-            <artifactId>mapper-spring-boot-starter</artifactId>
-            <version>${starter.mybatis.mapper.version}</version>
-        </dependency>
         <!-- pagehelper -->
         <dependency>
             <groupId>com.github.pagehelper</groupId>
@@ -122,6 +115,17 @@
             <groupId>org.apache.shiro</groupId>
             <artifactId>shiro-ehcache</artifactId>
             <version>${shiro.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.crazycake</groupId>
+            <artifactId>shiro-redis</artifactId>
+            <version>${shiro-redis.version}</version>
+            <exclusions>
+                <exclusion>
+                    <artifactId>shiro-core</artifactId>
+                    <groupId>org.apache.shiro</groupId>
+                </exclusion>
+            </exclusions>
         </dependency>
 
 
@@ -250,7 +254,38 @@
             <version>${swagger.version}</version>
         </dependency>
     </dependencies>
-
+    <profiles>
+        <!-- 开发环境 -->
+        <profile>
+            <id>dev</id>
+            <activation>
+                <activeByDefault>true</activeByDefault>
+            </activation>
+            <properties>
+                <spring.profiles.active>dev</spring.profiles.active>
+            </properties>
+        </profile>
+        <!-- 测试环境 -->
+        <profile>
+            <id>test</id>
+            <activation>
+                <activeByDefault>false</activeByDefault>
+            </activation>
+            <properties>
+                <spring.profiles.active>test</spring.profiles.active>
+            </properties>
+        </profile>
+        <!-- 生产环境 -->
+        <profile>
+            <id>prod</id>
+            <activation>
+                <activeByDefault>false</activeByDefault>
+            </activation>
+            <properties>
+                <spring.profiles.active>prod</spring.profiles.active>
+            </properties>
+        </profile>
+    </profiles>
     <build>
         <plugins>
             <plugin>
@@ -299,9 +334,9 @@
                 </configuration>
                 <dependencies>
                     <dependency>
-                        <groupId>tk.mybatis</groupId>
-                        <artifactId>mapper</artifactId>
-                        <version>${mapper.version}</version>
+                        <groupId>com.chrm</groupId>
+                        <artifactId>mybatis-generator-lombok-plugin</artifactId>
+                        <version>1.0-SNAPSHOT</version>
                     </dependency>
                     <dependency>
                         <groupId>mysql</groupId>
