--- a/springboot-shiro/src/main/resources/application-dev.yml
+++ b/springboot-shiro/src/main/resources/application-dev.yml
@@ -1,23 +1,12 @@
 ## 数据库设置
 spring:
   datasource:
-    url: jdbc:mysql://192.168.1.131:3306/shiro?useUnicode=true&characterEncoding=utf-8&useSSL=false
-    username: root
-    password: root
-    initialSize: 1
-    minIdle: 1
-    maxActive: 20
-    maxWait: 60000
-    timeBetweenEvictionRunsMillis: 60000
-    minEvictableIdleTimeMillis: 300000
-    poolPreparedStatements: true
-    maxPoolPreparedStatementPerConnectionSize: 20
-    validationQuery: SELECT 1
-    filters: stat,log4j,wall,config
-
+    url: jdbc:mysql://192.168.5.135:3316/shiro_demo?useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull&allowMultiQueries=true&useSSL=false
+    username: databank_135
+    password: yoYi_2016
   ## redis配置
   redis:
-    host: 192.168.1.131
+    host: 192.168.5.134
     port: 6379
 
 
