--- a/springboot-shiro/pom.xml
+++ b/springboot-shiro/pom.xml
@@ -226,7 +226,11 @@
             <artifactId>commons-logging</artifactId>
             <version>${commons.logging.version}</version>
         </dependency>
-
+        <dependency>
+            <groupId>joda-time</groupId>
+            <artifactId>joda-time</artifactId>
+            <version>${joda-time.version}</version>
+        </dependency>
         <!--tools Jar-->
         <dependency>
             <groupId>com.google.guava</groupId>
